First attempt to save Twitter messages